# Custom_Url_proxy

./: pyproject.toml  render_api.py  requirements.txt
myproject/myproject/: output.xml
myproject/myproject/spiders/: myspider.py
