[tool.poetry]
name = "render-api"
version = "0.0.1"
description = "Renders tricky urls and outputs html source code"
authors = [
    "Daniyal <dshahid980@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.10.12"
Scrapy = "^2.11.0"
Flask = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"